--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "url": "https://github.com/AnomalyInnovations/serverless-nodejs-starter.git"
   },
   "devDependencies": {
-    "serverless-bundle": "4.3.1",
-    "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.3.3"
-  },
-  "dependencies": {}
+    "aws-sdk": "^2.1692.0",
+    "serverless-bundle": "^6.3.1",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^14.4.0"
+  }
 }
